--- a/server-node/package.json
+++ b/server-node/package.json
@@ -22,5 +22,9 @@
     "ts-node-dev": "2.0.0",
     "ts-standard": "12.0.2",
     "typescript": "^5.4.3"
+  },
+  "dependencies": {
+    "socket.io": "4.7.5",
+    "ws": "8.16.0"
   }
 }
