--- a/server-node/package.json
+++ b/server-node/package.json
@@ -24,6 +24,7 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "file-type": "16.5.3",
     "socket.io": "4.7.5",
     "ws": "8.16.0"
   }
